# md-converter

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: AppIcon.icns
samples/: hello.md
scripts/: fetch-pandoc.sh  fetch-typst.sh
src/: convert.rs  main.rs  theme.rs
