[package]
name = "md-converter"
version = "0.1.0"
edition = "2021"
description = "Convert Markdown to DOCX or PDF — a small macOS GUI around bundled pandoc + typst."
rust-version = "1.80"
authors = ["Leonard Strouk <leonard@dotomics.bio>"]
publish = false

[[bin]]
name = "md-converter"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg"] }
rfd = "0.17"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "MD Converter"
identifier = "bio.livingmodels.MDConverter"
version = "0.1.0"
copyright = "© 2026 Leonard Strouk"
category = "public.app-category.productivity"
short_description = "Convert Markdown to DOCX or PDF"
long_description = "A small macOS app that wraps pandoc + typst to convert Markdown files into DOCX or PDF, aimed at users handling Claude Code output."
osx_minimum_system_version = "14.0"
icon = ["assets/AppIcon.icns"]
resources = ["vendor/pandoc", "vendor/typst"]
